GdkGLContext: chain finalize handler

https://bugzilla.gnome.org/show_bug.cgi?id=773979